--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 8d8e872] check point\n",
-      " 1 file changed, 13 insertions(+), 4 deletions(-)\n"
+      "[master d288944] check point\n",
+      " 1 file changed, 28 insertions(+), 5 deletions(-)\n"
      ]
     }
    ],
@@ -514,17 +514,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$Z_n$を$n$サンプル\n",
+    "* $Z_n$を$n$サンプル\n",
     "$\n",
     "X_1, \\cdots , X_n\n",
     "$\n",
-    "の最大値とする"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "の最大値とする\n",
     "$$\n",
     "F(x) = P(X_i \\le x) \\quad\\text{for}\\quad i = 1,\\cdots , n\n",
     "$$\n",
@@ -532,13 +526,7 @@
     "$$\n",
     "P(Z_n \\le x ) = \\Pi_{i=1}^n P(X_i \\le x)\n",
     "={F(x)}^n\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$\n",
     "$n\\to \\infty$の極限では　$Z_n$は「$X_i$が取り得る値の最大値が確率１で実現する」ような分布に収束するはず"
    ]
   },
@@ -546,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "中心極限定理にある意味似たようなスケーリング則を考えたい\n",
+    "* 中心極限定理にある意味似たようなスケーリング則を考えたい\n",
     "おそらく\n",
     "$$\n",
     "\\begin{align}\n",
@@ -569,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "これは\n",
+    "* これは\n",
     "ある$y$を固定したときに\n",
     "$$\n",
     "Z_n \\le a_n y + b_n\n",
@@ -581,7 +569,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "イメージは\n",
+    "* 呼び方は\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\begin{cases}\n",
+    "a_n &\\text{尺度パラメータ}\\\\\n",
+    "b_n &\\text{位置パラメータ}\n",
+    "\\end{cases}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## イメージ\n",
     "\n",
     "* 100サンプルなら最大値が90以下である確率は10%\n",
     "  $$b_{100} = 100,~a_{100} = 1 ,~  y = -10,~a_{100}y+b_{100}= 90,~ G(-10) = 0.1$$\n",
@@ -597,16 +600,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "書籍の\n",
+    "* 書籍の\n",
     "$$\n",
     "{F(a_ny+b_n)}^n \\to G(y) \n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$\n",
     "は\n",
     "$$\n",
     "\\begin{align}\n",
@@ -617,38 +614,47 @@
     "$$\n",
     "というイメージ。\n",
     "\n",
-    "さらに90,95,99といった閾値以外にも同じ$a_n,b_n$から導かれる99, 99.5, 99.9といった閾値を最大値が下回る確率についても同じ関係が成り立つことが主張されている"
+    "* さらに90,95,99といった閾値以外にも同じ$a_n,b_n$から導かれる99, 99.5, 99.9といった閾値を最大値が下回る確率についても同じ関係が成り立つことが主張されている"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "このように極限が$G$で特徴づけられるような確率分布を$G$の吸引領域（domain of attraction)と呼ぶ"
+    "* このように極限が$G$で特徴づけられるような確率分布を$G$の吸引領域（domain of attraction)と呼ぶ"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "書籍p12の最初の式も大雑把に言っておなじような主張をしている。（？）"
+    "* 書籍p12の最初の式も大雑把に言っておなじような主張をしている。（？）"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$G(y)$がゼロでも１でもないような$y$に対応する閾値$a_n y + b_n$は大きい$n$に対して、取り得る値の上限$w_F$に収束する\n",
-    "\n",
-    "なぜならば大きな$n$に対して$Z_n$は$w_F$近辺の値しか取らないようになるため"
+    "* $G(y)$がゼロでも１でもないような$y$に対応する閾値$a_n y + b_n$は大きい$n$に対して、取り得る値の上限$w_F$に収束する。なぜならば大きな$n$に対して$Z_n$は$w_F$近辺の値しか取らないようになるため\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "* $G$の中に入るのは「標準化された最大値からの距離」みたいなイメージ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 標準分布\n",
+    "* $X$が従う分布$F$が$G$の吸引域であったとする。\n",
+    "* このとき、$X$の線形変換$\\sigma X + \\mu$の分布関数も$G$の吸引域に属する\n",
+    "* 他方、$G$の引数を変数変換しても吸引域は変化しない\n",
+    "* したがって、$F$も$G$も引数に関する線形変換による同値類を考えればよい（$\\Leftarrow$ 厳密か怪しい表現）"
+   ]
   },
   {
    "cell_type": "markdown",
