--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master d288944] check point\n",
-      " 1 file changed, 28 insertions(+), 5 deletions(-)\n"
+      "[master 28fcde0] check point\n",
+      " 1 file changed, 45 insertions(+), 39 deletions(-)\n"
      ]
     }
    ],
@@ -654,6 +654,43 @@
     "* このとき、$X$の線形変換$\\sigma X + \\mu$の分布関数も$G$の吸引域に属する\n",
     "* 他方、$G$の引数を変数変換しても吸引域は変化しない\n",
     "* したがって、$F$も$G$も引数に関する線形変換による同値類を考えればよい（$\\Leftarrow$ 厳密か怪しい表現）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 命題2.2.1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\lim_{n\\to \\infty} n (1 - F(a_n y + b_n))\n",
+    "=\\lim_{n \\to \\infty} \\frac{ 1- F(a_n y + b_n) }{1/n}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\lim_{n \\to\\infty} \\frac{-\\log G(y)}{n(1-F(a_ny +b_n))}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "= \\lim_{n \\to \\infty} \\frac{\\log {F(a_n y + b_n)}^n}{n(1 - F(a_ny +b_n))}\n",
+    "= \\lim_{n \\to \\infty} \\frac{-\\log {F(a_n y + b_n)}}{(1 - F(a_ny +b_n))}\n",
+    "= \\lim_{f \\to 1} \\frac{\\log(f)}{f-1} = 1\n",
+    "$$"
    ]
   },
   {
