--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 28fcde0] check point\n",
-      " 1 file changed, 45 insertions(+), 39 deletions(-)\n"
+      "[master 4248700] check point\n",
+      " 1 file changed, 40 insertions(+), 3 deletions(-)\n"
      ]
     }
    ],
@@ -678,7 +678,12 @@
    "metadata": {},
    "source": [
     "$$\n",
+    "\\begin{align}\n",
     "\\lim_{n \\to\\infty} \\frac{-\\log G(y)}{n(1-F(a_ny +b_n))}\n",
+    "= &\\lim_{n \\to \\infty} \\frac{\\log {F(a_n y + b_n)}^n}{n(1 - F(a_ny +b_n))}\\nonumber\\\\\n",
+    "= &\\lim_{n \\to \\infty} \\frac{-\\log {F(a_n y + b_n)}}{(1 - F(a_ny +b_n))}\\nonumber\\\\\n",
+    "= &\\lim_{f \\to 1} \\frac{\\log(f)}{f-1} = 1\n",
+    "\\end{align}\n",
     "$$"
    ]
   },
@@ -686,10 +691,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 2.2.2節\n",
+    "\n",
+    "### 標準指数分布"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$F(x) = 1- \\exp(-x)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ F(x + \\log n) = 1 - \\frac{\\exp(-x)}{n} $$\n",
+    "なので、\n",
     "$$\n",
-    "= \\lim_{n \\to \\infty} \\frac{\\log {F(a_n y + b_n)}^n}{n(1 - F(a_ny +b_n))}\n",
-    "= \\lim_{n \\to \\infty} \\frac{-\\log {F(a_n y + b_n)}}{(1 - F(a_ny +b_n))}\n",
-    "= \\lim_{f \\to 1} \\frac{\\log(f)}{f-1} = 1\n",
+    "n(1- F(x+\\log n)) = \\exp(-x) \\to \\exp(-x)\n",
+    "$$\n",
+    "なので命題2.2.1まわりの議論により、\n",
+    "$$\n",
+    "-\\log G(x) = \\exp(-x)\n",
+    "$$\n",
+    "\n",
+    "よって、\n",
+    "$$\n",
+    "G(x ) = \\exp(-\\exp(-x))\n",
     "$$"
    ]
   },
