--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 4248700] check point\n",
-      " 1 file changed, 40 insertions(+), 3 deletions(-)\n"
+      "[master a2d1155] check point\n",
+      " 1 file changed, 36 insertions(+), 6 deletions(-)\n"
      ]
     }
    ],
@@ -684,15 +684,21 @@
     "= &\\lim_{n \\to \\infty} \\frac{-\\log {F(a_n y + b_n)}}{(1 - F(a_ny +b_n))}\\nonumber\\\\\n",
     "= &\\lim_{f \\to 1} \\frac{\\log(f)}{f-1} = 1\n",
     "\\end{align}\n",
-    "$$"
+    "$$\n",
+    "最後の等式は$\\log(x)$の一回微分の$x=1$での値を想像すれば良い"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2.2節\n",
-    "\n",
+    "## 2.2.2節"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 標準指数分布"
    ]
   },
@@ -720,6 +726,123 @@
     "よって、\n",
     "$$\n",
     "G(x ) = \\exp(-\\exp(-x))\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### パレート分布"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "F(x) = 1 - \\frac{1}{x^\\alpha}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{cases}\n",
+    "a_n = n^{1/\\alpha}\\\\\n",
+    "b_n= 0\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "とすると"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "F(a_n x +b_n ) = 1 - \\frac{1}{nx^\\alpha}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "なので、\n",
+    "\n",
+    "$$\n",
+    "n(1-F(a_nx +b_n) = \\frac{1}{x^\\alpha}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "従って\n",
+    "\n",
+    "$$\n",
+    "\\log G(x) = -\\frac{1}{x^\\alpha}\n",
+    "$$\n",
+    "すなわち、\n",
+    "$$\n",
+    "G(x) = \\exp(-x^{-\\alpha})\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ベータ分布"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "F(x) = 1 - (1-x)^\\alpha\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "a_n = n^{-1/\\alpha}\\\\\n",
+    "b_n = 1 \n",
+    "\\end{cases}\n",
+    "$$\n",
+    "とすると"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "F(a_nx + b) = 1-(-n^{-1/\\alpha}x)^\\alpha=1-n^{-1} (-x)^\\alpha\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "n(1-F(a_nx +b)) = (-x)^\\alpha\n",
+    "$$\n",
+    "となるので"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "G(x) = {\\rm e }^{-(-x)^\\alpha}\n",
     "$$"
    ]
   },
