--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master a2d1155] check point\n",
-      " 1 file changed, 36 insertions(+), 6 deletions(-)\n"
+      "[master c0201f0] check point\n",
+      " 1 file changed, 129 insertions(+), 6 deletions(-)\n"
      ]
     }
    ],
@@ -699,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 標準指数分布"
+    "### 標準指数分布($\\rightarrow$ Gambel $\\Lambda$)"
    ]
   },
   {
@@ -733,7 +733,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### パレート分布"
+    "### パレート分布 ($\\rightarrow$ Fr\\'echet $\\Phi$)"
    ]
   },
   {
@@ -803,7 +803,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ベータ分布"
+    "### ベータ分布 ($\\rightarrow$ Welbull $\\Psi$)"
    ]
   },
   {
@@ -843,6 +843,49 @@
    "source": [
     "$$\n",
     "G(x) = {\\rm e }^{-(-x)^\\alpha}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### これらをまとめた標準一般極値分布"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "G_\\xi(x)={\\rm e}^{-\\max(0,1+\\xi x)^{-1/\\xi}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Gambel\n",
+    "\n",
+    "$$\n",
+    "G_0(x) = \\lim_{\\xi \\to 0} {\\rm e}^{-(1+\\xi x)^{-1/\\xi}}={\\rm e}^{-{\\rm e}^{-x}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Frechet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "G_{1/\\alpha}={\\rm e}^{-\\max(0, 1+x/\\alpha)^{-\\alpha}}\n",
     "$$"
    ]
   },
@@ -927,7 +970,8 @@
    "toc_section_display": "block",
    "toc_window_display": true,
    "widenNotebook": false
-  }
+  },
+  "toc-showtags": false
  },
  "nbformat": 4,
  "nbformat_minor": 2
