--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,18 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[master af7884b] check point\n",
-      " 1 file changed, 51 insertions(+), 7 deletions(-)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
     "git commit -a -m \"check point\""
@@ -877,7 +868,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Frechet"
+    "#### Frechet"
    ]
   },
   {
@@ -885,7 +876,43 @@
    "metadata": {},
    "source": [
     "$$\n",
+    "\\begin{align}\n",
     "G_{1/\\alpha}={\\rm e}^{-\\max(0, 1+x/\\alpha)^{-\\alpha}}\n",
+    "\\end{align}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "G_{1/\\alpha}(\\alpha (x-1))={\\rm e}^{-\\max(0,x)^{-\\alpha}}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Wellbull"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "G_{-1/\\alpha}(x) = {\\rm e}^{-\\max(0,1-x/\\alpha)^\\alpha}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "G_{-1/\\alpha}(\\alpha(x+1)) = {\\rm e}^{-\\max(0,-x)^\\alpha}\n",
     "$$"
    ]
   },
