--- a/theoretical_consideraiton.ipynb
+++ b/theoretical_consideraiton.ipynb
@@ -53,9 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 6b02552] check point\n",
+      " 1 file changed, 39 insertions(+), 12 deletions(-)\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "git commit -a -m \"check point\""
@@ -690,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 標準指数分布($\\rightarrow$ Gambel $\\Lambda$)"
+    "### Exp(1)と表記される標準指数分布($\\rightarrow$ Gambel $\\Lambda$)"
    ]
   },
   {
