--- a/optimizer_sandbox.ipynb
+++ b/optimizer_sandbox.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: %%bash is a cell magic, but the cell body is empty.\n"
+      "[master a6160b7] checkpoint\n",
+      " 3 files changed, 1141 insertions(+), 173 deletions(-)\n",
+      " create mode 100644 optimizer_sandbox.ipynb\n",
+      " create mode 100644 tensor_sandbox.ipynb\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "\n",
-    "\n"
+    "git commit -a -m \"checkpoint\"\n"
    ]
   },
   {
@@ -201,9 +204,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base2]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-base2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -215,9 +218,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
