--- a/my_toy_nn2.ipynb
+++ b/my_toy_nn2.ipynb
@@ -12,15 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 59980d0] checkpoint\n",
-      " 1 file changed, 496 insertions(+), 15 deletions(-)\n"
+      "[master 9710791] checkpoint\n",
+      " 2 files changed, 628 insertions(+), 435 deletions(-)\n"
      ]
     }
    ],
@@ -2530,16 +2530,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
     "from skorch import NeuralNetRegressor\n",
     "\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "wrapped_model = NeuralNetRegressor(\n",
     "  model,            # ここで、先程定義したNetクラスを引数として与える\n",
+    "  max_epochs=10,\n",
+    "  optimizer=optim.Adam,\n",
+    "  lr=0.001,\n",
+    "  device='cpu',\n",
+    "  batch_size=128,\n",
+    "  # デフォルトだと入力データの2割が検証に使われる。入力データすべてを学習に使うためには、以下の通りにする\n",
+    "  # train_split=None,\n",
+    "  criterion= nn.MSELoss    # CNNの最後のactivationがlog_softmaxなので、lossはNLLoss。\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrapped_model = NeuralNetRegressor(\n",
+    "  model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'skorch.regressor.NeuralNetRegressor'>[uninitialized](\n",
+       "  module=Net(\n",
+       "    (fc1): Linear(in_features=3, out_features=50, bias=True)\n",
+       "    (a1): ReLU()\n",
+       "    (fc2): Linear(in_features=50, out_features=1, bias=True)\n",
+       "  ),\n",
+       "  module_=Net(\n",
+       "    (fc1): Linear(in_features=3, out_features=50, bias=True)\n",
+       "    (a1): ReLU()\n",
+       "    (fc2): Linear(in_features=50, out_features=1, bias=True)\n",
+       "  ),\n",
+       ")"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrapped_model.set_params(# ここで、先程定義したNetクラスを引数として与える\n",
+    "  max_epochs=10,\n",
+    "  optimizer=optim.Adam,\n",
+    "  lr=0.001,\n",
+    "  device='cpu',\n",
+    "  batch_size=128,\n",
+    "  # デフォルトだと入力データの2割が検証に使われる。入力データすべてを学習に使うためには、以下の通りにする\n",
+    "  # train_split=None,\n",
+    "  criterion= nn.MSELoss    # CNNの最後のactivationがlog_softmaxなので、lossはNLLoss。\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1     \u001b[36m8392.9107\u001b[0m     \u001b[32m7869.7788\u001b[0m  0.0099\n",
+      "      2     \u001b[36m6918.3522\u001b[0m     \u001b[32m6472.8583\u001b[0m  0.0097\n",
+      "      3     \u001b[36m5620.7088\u001b[0m     \u001b[32m5253.6583\u001b[0m  0.0096\n",
+      "      4     \u001b[36m4503.5391\u001b[0m     \u001b[32m4212.3892\u001b[0m  0.0097\n",
+      "      5     \u001b[36m3564.1600\u001b[0m     \u001b[32m3344.1453\u001b[0m  0.0096\n",
+      "      6     \u001b[36m2794.9787\u001b[0m     \u001b[32m2637.8333\u001b[0m  0.0096\n",
+      "      7     \u001b[36m2181.8976\u001b[0m     \u001b[32m2078.4201\u001b[0m  0.0096\n",
+      "      8     \u001b[36m1708.6296\u001b[0m     \u001b[32m1649.1167\u001b[0m  0.0096\n",
+      "      9     \u001b[36m1356.8035\u001b[0m     \u001b[32m1331.2639\u001b[0m  0.0096\n",
+      "     10     \u001b[36m1106.5979\u001b[0m     \u001b[32m1105.3232\u001b[0m  0.0096\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1     \u001b[36m8579.3541\u001b[0m     \u001b[32m6324.3973\u001b[0m  0.0095\n",
+      "      2     \u001b[36m7081.5304\u001b[0m     \u001b[32m5148.6731\u001b[0m  0.0097\n",
+      "      3     \u001b[36m5761.4721\u001b[0m     \u001b[32m4131.9409\u001b[0m  0.0097\n",
+      "      4     \u001b[36m4623.2758\u001b[0m     \u001b[32m3273.5824\u001b[0m  0.0096\n",
+      "      5     \u001b[36m3664.4670\u001b[0m     \u001b[32m2568.2845\u001b[0m  0.0096\n",
+      "      6     \u001b[36m2877.6271\u001b[0m     \u001b[32m2005.3574\u001b[0m  0.0096\n",
+      "      7     \u001b[36m2248.7634\u001b[0m     \u001b[32m1570.5726\u001b[0m  0.0096\n",
+      "      8     \u001b[36m1761.6404\u001b[0m     \u001b[32m1248.1138\u001b[0m  0.0097\n",
+      "      9     \u001b[36m1397.9416\u001b[0m     \u001b[32m1020.5314\u001b[0m  0.0096\n",
+      "     10     \u001b[36m1137.8615\u001b[0m      \u001b[32m869.6663\u001b[0m  0.0096\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1     \u001b[36m8722.8976\u001b[0m     \u001b[32m6328.1002\u001b[0m  0.0095\n",
+      "      2     \u001b[36m7206.0575\u001b[0m     \u001b[32m5154.9186\u001b[0m  0.0097\n",
+      "      3     \u001b[36m5867.8618\u001b[0m     \u001b[32m4139.6907\u001b[0m  0.0096\n",
+      "      4     \u001b[36m4712.8367\u001b[0m     \u001b[32m3281.9671\u001b[0m  0.0096\n",
+      "      5     \u001b[36m3738.6949\u001b[0m     \u001b[32m2576.5569\u001b[0m  0.0097\n",
+      "      6     \u001b[36m2938.1397\u001b[0m     \u001b[32m2012.9698\u001b[0m  0.0096\n",
+      "      7     \u001b[36m2297.2432\u001b[0m     \u001b[32m1577.1103\u001b[0m  0.0096\n",
+      "      8     \u001b[36m1799.7426\u001b[0m     \u001b[32m1253.3335\u001b[0m  0.0096\n",
+      "      9     \u001b[36m1427.3025\u001b[0m     \u001b[32m1024.3625\u001b[0m  0.0096\n",
+      "     10     \u001b[36m1160.0687\u001b[0m      \u001b[32m872.1961\u001b[0m  0.0096\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1     \u001b[36m8998.5025\u001b[0m     \u001b[32m6324.4396\u001b[0m  0.0096\n",
+      "      2     \u001b[36m7451.0244\u001b[0m     \u001b[32m5148.1131\u001b[0m  0.0097\n",
+      "      3     \u001b[36m6082.9763\u001b[0m     \u001b[32m4130.2327\u001b[0m  0.0096\n",
+      "      4     \u001b[36m4898.8158\u001b[0m     \u001b[32m3270.2080\u001b[0m  0.0096\n",
+      "      5     \u001b[36m3896.4156\u001b[0m     \u001b[32m2562.8555\u001b[0m  0.0096\n",
+      "      6     \u001b[36m3068.7856\u001b[0m     \u001b[32m1997.6970\u001b[0m  0.0096\n",
+      "      7     \u001b[36m2402.2865\u001b[0m     \u001b[32m1560.8226\u001b[0m  0.0096\n",
+      "      8     \u001b[36m1881.1287\u001b[0m     \u001b[32m1236.7772\u001b[0m  0.0096\n",
+      "      9     \u001b[36m1487.4425\u001b[0m     \u001b[32m1008.4636\u001b[0m  0.0096\n",
+      "     10     \u001b[36m1201.7930\u001b[0m      \u001b[32m857.9984\u001b[0m  0.0097\n",
+      "  epoch    train_loss    valid_loss     dur\n",
+      "-------  ------------  ------------  ------\n",
+      "      1     \u001b[36m8609.5565\u001b[0m     \u001b[32m6327.9321\u001b[0m  0.0096\n",
+      "      2     \u001b[36m7124.6569\u001b[0m     \u001b[32m5155.5164\u001b[0m  0.0097\n",
+      "      3     \u001b[36m5813.6561\u001b[0m     \u001b[32m4140.6109\u001b[0m  0.0096\n",
+      "      4     \u001b[36m4680.4365\u001b[0m     \u001b[32m3282.7337\u001b[0m  0.0097\n",
+      "      5     \u001b[36m3722.9055\u001b[0m     \u001b[32m2576.7799\u001b[0m  0.0096\n",
+      "      6     \u001b[36m2934.2171\u001b[0m     \u001b[32m2012.4102\u001b[0m  0.0096\n",
+      "      7     \u001b[36m2301.0746\u001b[0m     \u001b[32m1575.6847\u001b[0m  0.0096\n",
+      "      8     \u001b[36m1807.9146\u001b[0m     \u001b[32m1251.1286\u001b[0m  0.0096\n",
+      "      9     \u001b[36m1437.1623\u001b[0m     \u001b[32m1021.6173\u001b[0m  0.0096\n",
+      "     10     \u001b[36m1169.7306\u001b[0m      \u001b[32m869.2650\u001b[0m  0.0096\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(wrapped_model, X.numpy(), y.numpy(), cv=5) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### L1 regularization\n",
+    "\n",
+    "https://skorch.readthedocs.io/en/latest/user/neuralnet.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RegularizedNet(NeuralNetRegressor):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        #self.lambda1 = lambda1\n",
+    "\n",
+    "    def get_loss(self, y_pred, y_true, X=None, training=False):\n",
+    "        loss = super().get_loss(y_pred, y_true, X=X, training=training)\n",
+    "        #loss += self.lambda1 * sum([w.abs().sum() for w in self.module_.parameters()])\n",
+    "        return loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 二段階定義"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrapped_model = RegularizedNet(\n",
+    "  model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class '__main__.RegularizedNet'>[uninitialized](\n",
+       "  module=Net(\n",
+       "    (fc1): Linear(in_features=3, out_features=50, bias=True)\n",
+       "    (a1): ReLU()\n",
+       "    (fc2): Linear(in_features=50, out_features=1, bias=True)\n",
+       "  ),\n",
+       "  module_=Net(\n",
+       "    (fc1): Linear(in_features=3, out_features=50, bias=True)\n",
+       "    (a1): ReLU()\n",
+       "    (fc2): Linear(in_features=50, out_features=1, bias=True)\n",
+       "  ),\n",
+       ")"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wrapped_model.set_params(# ここで、先程定義したNetクラスを引数として与える\n",
     "  max_epochs=10,\n",
     "  optimizer=optim.Adam,\n",
     "  lr=0.001,\n",
@@ -2555,12 +2773,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### L1 regularization"
+    "### 一段階initialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrapped_model = RegularizedNet(\n",
+    "  model,            # ここで、先程定義したNetクラスを引数として与える\n",
+    "  max_epochs=10,\n",
+    "  optimizer=optim.Adam,\n",
+    "  lr=0.001,\n",
+    "  device='cpu',\n",
+    "  batch_size=128,\n",
+    "  # デフォルトだと入力データの2割が検証に使われる。入力データすべてを学習に使うためには、以下の通りにする\n",
+    "  # train_split=None,\n",
+    "  criterion= nn.MSELoss    # CNNの最後のactivationがlog_softmaxなので、lossはNLLoss。\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mNeuralNet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Set the parameters of this class.\n",
+       "\n",
+       "Valid parameter keys can be listed with ``get_params()``.\n",
+       "\n",
+       "Returns\n",
+       "-------\n",
+       "self\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/anaconda3/envs/base2/lib/python3.7/site-packages/skorch/net.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "?NeuralNet.set_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function skorch.net.NeuralNet.__init__(self, module, criterion, optimizer=<class 'torch.optim.sgd.SGD'>, lr=0.01, max_epochs=10, batch_size=128, iterator_train=<class 'torch.utils.data.dataloader.DataLoader'>, iterator_valid=<class 'torch.utils.data.dataloader.DataLoader'>, dataset=<class 'skorch.dataset.Dataset'>, train_split=<skorch.dataset.CVSplit object at 0x7fd8a0df5c50>, callbacks=None, warm_start=False, verbose=1, device='cpu', **kwargs)>"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NeuralNet.__init__"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### 走らせ方は同じ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "scores = cross_val_score(wrapped_model, X.numpy(), y.numpy(), cv=5) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## skorchに頼らないやり方"
    ]
@@ -2696,82 +3004,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import cross_val_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  epoch    train_loss    valid_loss     dur\n",
-      "-------  ------------  ------------  ------\n",
-      "      1     \u001b[36m8392.9107\u001b[0m     \u001b[32m7869.7788\u001b[0m  0.0120\n",
-      "      2     \u001b[36m6918.3522\u001b[0m     \u001b[32m6472.8583\u001b[0m  0.0109\n",
-      "      3     \u001b[36m5620.7088\u001b[0m     \u001b[32m5253.6583\u001b[0m  0.0105\n",
-      "      4     \u001b[36m4503.5391\u001b[0m     \u001b[32m4212.3892\u001b[0m  0.0104\n",
-      "      5     \u001b[36m3564.1600\u001b[0m     \u001b[32m3344.1453\u001b[0m  0.0103\n",
-      "      6     \u001b[36m2794.9787\u001b[0m     \u001b[32m2637.8333\u001b[0m  0.0102\n",
-      "      7     \u001b[36m2181.8976\u001b[0m     \u001b[32m2078.4201\u001b[0m  0.0096\n",
-      "      8     \u001b[36m1708.6296\u001b[0m     \u001b[32m1649.1167\u001b[0m  0.0095\n",
-      "      9     \u001b[36m1356.8035\u001b[0m     \u001b[32m1331.2639\u001b[0m  0.0095\n",
-      "     10     \u001b[36m1106.5979\u001b[0m     \u001b[32m1105.3232\u001b[0m  0.0095\n",
-      "  epoch    train_loss    valid_loss     dur\n",
-      "-------  ------------  ------------  ------\n",
-      "      1     \u001b[36m8579.3541\u001b[0m     \u001b[32m6324.3973\u001b[0m  0.0094\n",
-      "      2     \u001b[36m7081.5304\u001b[0m     \u001b[32m5148.6731\u001b[0m  0.0095\n",
-      "      3     \u001b[36m5761.4721\u001b[0m     \u001b[32m4131.9409\u001b[0m  0.0095\n",
-      "      4     \u001b[36m4623.2758\u001b[0m     \u001b[32m3273.5824\u001b[0m  0.0094\n",
-      "      5     \u001b[36m3664.4670\u001b[0m     \u001b[32m2568.2845\u001b[0m  0.0095\n",
-      "      6     \u001b[36m2877.6271\u001b[0m     \u001b[32m2005.3574\u001b[0m  0.0094\n",
-      "      7     \u001b[36m2248.7634\u001b[0m     \u001b[32m1570.5726\u001b[0m  0.0094\n",
-      "      8     \u001b[36m1761.6404\u001b[0m     \u001b[32m1248.1138\u001b[0m  0.0094\n",
-      "      9     \u001b[36m1397.9416\u001b[0m     \u001b[32m1020.5314\u001b[0m  0.0095\n",
-      "     10     \u001b[36m1137.8615\u001b[0m      \u001b[32m869.6663\u001b[0m  0.0095\n",
-      "  epoch    train_loss    valid_loss     dur\n",
-      "-------  ------------  ------------  ------\n",
-      "      1     \u001b[36m8722.8976\u001b[0m     \u001b[32m6328.1002\u001b[0m  0.0094\n",
-      "      2     \u001b[36m7206.0575\u001b[0m     \u001b[32m5154.9186\u001b[0m  0.0094\n",
-      "      3     \u001b[36m5867.8618\u001b[0m     \u001b[32m4139.6907\u001b[0m  0.0095\n",
-      "      4     \u001b[36m4712.8367\u001b[0m     \u001b[32m3281.9671\u001b[0m  0.0099\n",
-      "      5     \u001b[36m3738.6949\u001b[0m     \u001b[32m2576.5569\u001b[0m  0.0095\n",
-      "      6     \u001b[36m2938.1397\u001b[0m     \u001b[32m2012.9698\u001b[0m  0.0094\n",
-      "      7     \u001b[36m2297.2432\u001b[0m     \u001b[32m1577.1103\u001b[0m  0.0095\n",
-      "      8     \u001b[36m1799.7426\u001b[0m     \u001b[32m1253.3335\u001b[0m  0.0095\n",
-      "      9     \u001b[36m1427.3025\u001b[0m     \u001b[32m1024.3625\u001b[0m  0.0095\n",
-      "     10     \u001b[36m1160.0687\u001b[0m      \u001b[32m872.1961\u001b[0m  0.0095\n",
-      "  epoch    train_loss    valid_loss     dur\n",
-      "-------  ------------  ------------  ------\n",
-      "      1     \u001b[36m8998.5025\u001b[0m     \u001b[32m6324.4396\u001b[0m  0.0094\n",
-      "      2     \u001b[36m7451.0244\u001b[0m     \u001b[32m5148.1131\u001b[0m  0.0094\n",
-      "      3     \u001b[36m6082.9763\u001b[0m     \u001b[32m4130.2327\u001b[0m  0.0095\n",
-      "      4     \u001b[36m4898.8158\u001b[0m     \u001b[32m3270.2080\u001b[0m  0.0095\n",
-      "      5     \u001b[36m3896.4156\u001b[0m     \u001b[32m2562.8555\u001b[0m  0.0094\n",
-      "      6     \u001b[36m3068.7856\u001b[0m     \u001b[32m1997.6970\u001b[0m  0.0095\n",
-      "      7     \u001b[36m2402.2865\u001b[0m     \u001b[32m1560.8226\u001b[0m  0.0095\n",
-      "      8     \u001b[36m1881.1287\u001b[0m     \u001b[32m1236.7772\u001b[0m  0.0095\n",
-      "      9     \u001b[36m1487.4425\u001b[0m     \u001b[32m1008.4636\u001b[0m  0.0095\n",
-      "     10     \u001b[36m1201.7930\u001b[0m      \u001b[32m857.9984\u001b[0m  0.0095\n",
-      "  epoch    train_loss    valid_loss     dur\n",
-      "-------  ------------  ------------  ------\n",
-      "      1     \u001b[36m8609.5565\u001b[0m     \u001b[32m6327.9321\u001b[0m  0.0095\n",
-      "      2     \u001b[36m7124.6569\u001b[0m     \u001b[32m5155.5164\u001b[0m  0.0096\n",
-      "      3     \u001b[36m5813.6561\u001b[0m     \u001b[32m4140.6109\u001b[0m  0.0095\n",
-      "      4     \u001b[36m4680.4365\u001b[0m     \u001b[32m3282.7337\u001b[0m  0.0095\n",
-      "      5     \u001b[36m3722.9055\u001b[0m     \u001b[32m2576.7799\u001b[0m  0.0095\n",
-      "      6     \u001b[36m2934.2171\u001b[0m     \u001b[32m2012.4102\u001b[0m  0.0095\n",
-      "      7     \u001b[36m2301.0746\u001b[0m     \u001b[32m1575.6847\u001b[0m  0.0095\n",
-      "      8     \u001b[36m1807.9146\u001b[0m     \u001b[32m1251.1286\u001b[0m  0.0095\n",
-      "      9     \u001b[36m1437.1623\u001b[0m     \u001b[32m1021.6173\u001b[0m  0.0095\n",
-      "     10     \u001b[36m1169.7306\u001b[0m      \u001b[32m869.2650\u001b[0m  0.0095\n"
-     ]
-    }
-   ],
-   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
     "scores = cross_val_score(wrapped_model, X.numpy(), y.numpy(), cv=5) "
    ]
   },
